--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,7 @@
   "display": "standalone",
   "background_color": "#f7f9fc",
   "theme_color": "#0d6efd",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "icons/icon-192.png",
