--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tour Guide France",
+  "name": "Lenine, Paris",
   "short_name": "TourGuide",
   "start_url": "./index.html",
   "display": "standalone",
